# experimental_robotics_course

./: .gitignore  README.md
arduino_cmd_vel/: arduino_cmd_vel.ino
src/dean_files/DINGO/: CMakeLists.txt
src/dean_files/DINGO_controller/: CMakeLists.txt  README.md  package.xml
src/dean_files/DINGO_controller/src/: DINGO_controller.cpp
src/dean_files/gazebo_odom_publisher/: CMakeLists.txt  package.xml
src/follow_waypoints/saved_path/: pose.csv
src/ouster_example/ouster_ros/: os1.launch
src/simple_drive/launch/: course_drive.launch
src/thk_nav/: CMakeLists.txt  package.xml
src/thk_nav/launch/: course_navigation.launch  course_navigation_ouster.launch  course_navigation_realsense.launch  course_navigation_realsense2.launch  course_slam_ouster.launch  course_slam_realsense.launch  course_test.launch  demo_turtlebot3_navigation_with_map.launch  realsense_to_ouster.launch  rs_camera.launch  rs_camera_l515.launch  rs_for_ouster.launch  rtab_ouster_realsense.launch  test_ouster_mapping.launch  test_ouster_realsense_bk.launch  test_ouster_realsense_bk2.launch  test_ouster_realsense_bk3.launch  test_ouster_realsense_bk4.launch
src/thk_nav/launch_sensors/: rs_l515_and_t265.launch  rs_rtabmap_l515_t265.launch
src/thk_nav/launch_slam/: rtabmap_ouster.launch  rtabmap_realsense.launch  rtabmap_realsense_pruned.launch
src/thk_nav/param/: costmap_common_params_course.yaml  global_costmap_params.yaml  local_costmap_params.yaml
src/thk_nav/rviz/: turtlebot3_navigation.rviz
src/thk_nav/scripts/: path_planning_for_mapping.py
src/thk_nav/src/: change_timestamp.cpp
(+50 files in other folders)
